<resources>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="carry_on">Continue</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="overwrite">Overwrite</string>
    <string name="move">Move</string>
    <string name="replace">Replace</string>
    <string name="rename">Rename</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="continue_question">Continue?</string>
    <string name="delete_question">Delete?</string>
    <string name="exit_question">Exit?</string>
    <string name="station">Station</string>
    <string name="leg">Leg</string>
    <string name="splay">Splay</string>
    <string name="not_applicable">N/A</string>
    <string name="no_data">No Data</string>
    <string name="unknown">Unknown</string>
    <string name="error_prefix">Error</string>
    <string name="experimental_warning">Experimental</string>
    <string name="app_name" translatable="false">SexyTopo</string>
    <string name="title_activity_start_up">Starting</string>
    <string name="action_table">Table</string>
    <string name="action_plan">Plan</string>
    <string name="action_elevation">Elevation</string>
    <string name="action_file">File</string>
    <string name="action_settings">Settings</string>
    <string name="action_device">Instrument</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_file_new">New Survey</string>
    <string name="action_file_open">Open Survey…</string>
    <string name="action_file_delete">Delete Survey…</string>
    <string name="action_file_save">Save</string>
    <string name="action_file_save_as">Save As…</string>
    <string name="action_file_import">Import</string>
    <string name="action_file_export">Export…</string>
    <string name="action_tools">Tools</string>
    <string name="action_undo_last_leg">Undo last reading</string>
    <string name="action_generate_test_survey">Generate Test Survey</string>
    <string name="sketch_menu_delete_last_leg">Undo Last Reading</string>
    <string name="sketch_menu_centre_view">Centre on Active</string>
    <string name="sketch_menu_auto_recentre">Auto-Recentre</string>
    <string name="sketch_menu_show_grid">Graph Paper</string>
    <string name="sketch_menu_snap_to_lines">Snap to Lines</string>
    <string name="sketch_menu_fade_non_active">Fade Non-Active</string>
    <string name="sketch_menu_show_station_labels">Station Labels</string>
    <string name="sketch_menu_show_splays">Show Splays</string>
    <string name="sketch_menu_show_sketch">Show Sketch</string>
    <string name="sketch_menu_show_connect">Linked Surveys</string>
    <string name="settings_general_title">General</string>
    <string name="settings_general_summary">Theme, orientation, vibration</string>
    <string name="settings_sketching_summary">Drawing tools, display options</string>
    <string name="settings_export_summary">Export formats and folder options</string>
    <string name="settings_manual_data_entry_summary">LRUD fields, angle format</string>
    <string name="settings_instruments_summary">Instrument tolerances, calibration</string>
    <string name="settings_developer_summary">Debugging options</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_theme_summary">Join the dark side? (Restarts app, so save your survey before changing!)</string>
    <string name="settings_orientation_title">Orientation</string>
    <string name="settings_orientation_summary">Override device orientation on the Table and Graph views</string>
    <string name="settings_new_station_vibration_title">Vibrate on new station</string>
    <string name="settings_new_station_vibration_summary">Vibrate when new station is created</string>
    <string name="settings_hot_corners_title">Hot corners</string>
    <string name="settings_hot_corners_summary">Drag from the corners of the sketch to move the view in drawing modes</string>
    <string name="settings_instruments_title">Instruments</string>
    <string name="settings_max_distance_delta_title">Max distance delta (m)</string>
    <string name="settings_max_distance_delta_summary">Angular method: how much the distance readings may differ when deciding whether to create a new station</string>
    <string name="settings_max_angle_delta_title">Max angle delta (degrees)</string>
    <string name="settings_max_angle_delta_summary">Angular method: how much the azimuth or inclination readings may differ when deciding whether to create a new station</string>
    <string name="settings_calibration_algorithm_title">Disto-X calibration algorithm</string>
    <string name="settings_calibration_algorithm_summary">Override Disto-X calibration algorithm choice</string>
    <string name="settings_sketching_title">Sketching</string>
    <string name="settings_delete_path_fragments_title">Delete line fragments</string>
    <string name="settings_delete_path_fragments_summary">Delete only the nearest parts of a sketch line in delete mode (if off, deletes the whole line)</string>
    <string name="settings_highlight_latest_leg_title">Highlight latest leg</string>
    <string name="settings_highlight_latest_leg_summary">Show most recent measurement in purple</string>
    <string name="settings_two_finger_movement_title">Two-finger movement (experimental)</string>
    <string name="settings_two_finger_movement_summary">Two fingers move the screen even when drawing etc.</string>
    <string name="settings_survey_text_tool_font_size_title">Text tool label size</string>
    <string name="settings_survey_text_tool_font_size_summary">How big to initially draw manually-placed text (sp)</string>
    <string name="settings_survey_symbol_size_title">Survey symbol size</string>
    <string name="settings_survey_symbol_size_summary">How big to initially draw symbols (dp)</string>
    <string name="settings_leg_width_title">Leg line thickness</string>
    <string name="settings_leg_width_summary">How wide to draw leg lines (dp)</string>
    <string name="settings_splay_width_title">Splay line thickness</string>
    <string name="settings_splay_width_summary">How wide to draw splay lines (dp)</string>
    <string name="settings_station_diameter_title">Station diameter</string>
    <string name="settings_station_diameter_summary">How big to draw station symbols (dp)</string>
    <string name="settings_station_label_font_size_sp_title">Station label font size</string>
    <string name="settings_station_label_font_size_sp_summary">Font size of station labels</string>
    <string name="settings_legend_font_size_sp_title">Legend font size</string>
    <string name="settings_legend_font_size_sp_summary">Font size of legend</string>
    <string name="settings_anti_alias_title">Anti-alias sketch lines</string>
    <string name="settings_anti_alias_summary">Apply antialiasing to sketch lines etc. (improves visual display at the cost of some performance)</string>
    <string name="settings_manual_data_entry_title">Manual Data Entry</string>
    <string name="settings_export_title">Export</string>
    <string name="settings_export_folder_name_title">Export folder name</string>
    <string name="settings_export_folder_name_summary">Name of the folder within the survey folder to export to</string>
    <string name="settings_export_type_subfolders_title">Export type subfolders</string>
    <string name="settings_export_type_subfolders_summary">Create subfolders named after export type (e.g. therion, survex)</string>
    <string name="settings_export_svg_title">SVG</string>
    <string name="settings_export_svg_section_summary">SVG export options</string>
    <string name="settings_export_svg_background_title">Background</string>
    <string name="settings_export_svg_background_summary">Optionally export with an opaque background</string>
    <string name="settings_export_svg_stroke_width_title">SVG stroke width</string>
    <string name="settings_export_svg_stroke_width_summary">How wide to draw lines in SVG export</string>
    <string name="settings_export_svg_leg_width_title">SVG leg width</string>
    <string name="settings_export_svg_leg_width_summary">How wide to draw leg lines in SVG export</string>
    <string name="settings_export_svg_splay_width_title">SVG splay width</string>
    <string name="settings_export_svg_splay_width_summary">How wide to draw splay lines in SVG export</string>
    <string name="settings_export_svg_legend_title">Show legend</string>
    <string name="settings_export_svg_legend_summary">Include a legend strip with title, date, stats etc.</string>
    <string name="settings_export_svg_north_arrow_title">Show north arrow</string>
    <string name="settings_export_svg_north_arrow_summary">Add a north arrow to the legend on plan exports</string>
    <string name="settings_export_svg_scale_bar_title">Show scale bar</string>
    <string name="settings_export_svg_scale_bar_summary">Add a scale bar to the legend</string>
    <string name="settings_export_svg_team_title">Show survey team</string>
    <string name="settings_export_svg_team_summary">Show a list of the surveyors</string>
    <string name="settings_export_svg_cross_sections_title">Export cross-sections</string>
    <string name="settings_export_svg_cross_sections_summary">Include cross-section sketches in SVG export</string>
    <string name="settings_export_svg_symbols_title">Export symbols</string>
    <string name="settings_export_svg_symbols_summary">Include symbols in SVG export</string>
    <string name="settings_export_svg_centreline_title">Show centreline</string>
    <string name="settings_export_svg_centreline_summary">Draw the survey centreline (legs) in SVG export</string>
    <string name="settings_export_svg_stations_title">Show station labels</string>
    <string name="settings_export_svg_stations_summary">Draw station name labels in SVG export</string>
    <string name="settings_export_svg_splays_title">Show splays</string>
    <string name="settings_export_svg_splays_summary">Draw splay shots (LRUD lines) in SVG export</string>
    <string name="settings_export_svg_grid_title">Show grid</string>
    <string name="settings_export_svg_grid_summary">Draw a background grid behind the survey</string>
    <string name="settings_export_svg_tagline_title">Show tagline</string>
    <string name="settings_export_svg_tagline_summary">Provide proper credit to SexyTopo</string>
    <string name="settings_export_therion_title">Therion</string>
    <string name="settings_export_therion_section_summary">Therion export options</string>
    <string name="settings_developer_title">Developer</string>
    <string name="menu_leg">Leg</string>
    <string name="menu_set_active_station">Set Active</string>
    <string name="menu_rename_station">Rename</string>
    <string name="menu_edit_leg">Edit</string>
    <string name="menu_promote_to_above_leg">Add to Leg Above</string>
    <string name="menu_upgrade_splay">Upgrade to Leg</string>
    <string name="menu_downgrade_leg">Downgrade to Splay</string>
    <string name="menu_delete_leg">Delete</string>
    <string name="menu_jump_to">Jump</string>
    <string name="menu_jump_to_station_in_plan">&#10132; Plan</string>
    <string name="menu_jump_to_station_in_elevation">&#10132; Elevation</string>
    <string name="menu_jump_to_station_in_table">&#10132; Data Table</string>
    <string name="menu_delete_station">Delete</string>
    <string name="menu_reverse">Reverse</string>
    <string name="menu_start_new_survey">Start New Survey Here</string>
    <string name="menu_unlink_survey">Unlink Linked Survey</string>
    <string name="menu_comment">Comment</string>
    <string name="menu_comment_leg">Leg comment</string>
    <string name="menu_toggle_left_right">Toggle Left/Right</string>
</resources>