<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="pref_export_svg_background"
        android:title="@string/settings_export_svg_background_title"
        android:summary="@string/settings_export_svg_background_summary"
        android:entries="@array/settings_export_svg_background_entries"
        android:entryValues="@array/settings_export_svg_background_values"
        android:defaultValue="white" />

    <CheckBoxPreference
        android:key="pref_export_svg_legend"
        android:title="@string/settings_export_svg_legend_title"
        android:summary="@string/settings_export_svg_legend_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_export_svg_north_arrow"
        android:title="@string/settings_export_svg_north_arrow_title"
        android:summary="@string/settings_export_svg_north_arrow_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_export_svg_scale_bar"
        android:title="@string/settings_export_svg_scale_bar_title"
        android:summary="@string/settings_export_svg_scale_bar_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_export_svg_team"
        android:title="@string/settings_export_svg_team_title"
        android:summary="@string/settings_export_svg_team_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_export_svg_cross_sections"
        android:title="@string/settings_export_svg_cross_sections_title"
        android:summary="@string/settings_export_svg_cross_sections_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_export_svg_symbols"
        android:title="@string/settings_export_svg_symbols_title"
        android:summary="@string/settings_export_svg_symbols_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_export_svg_centreline"
        android:title="@string/settings_export_svg_centreline_title"
        android:summary="@string/settings_export_svg_centreline_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_export_svg_stations"
        android:title="@string/settings_export_svg_stations_title"
        android:summary="@string/settings_export_svg_stations_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_export_svg_splays"
        android:title="@string/settings_export_svg_splays_title"
        android:summary="@string/settings_export_svg_splays_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_export_svg_grid"
        android:title="@string/settings_export_svg_grid_title"
        android:summary="@string/settings_export_svg_grid_summary"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="pref_export_svg_tagline"
        android:title="@string/settings_export_svg_tagline_title"
        android:summary="@string/settings_export_svg_tagline_summary"
        android:defaultValue="true" />

    <EditTextPreference
        android:key="pref_export_svg_stroke_width"
        android:title="@string/settings_export_svg_stroke_width_title"
        android:summary="@string/settings_export_svg_stroke_width_summary"
        android:inputType="number"
        android:defaultValue="1"/>

    <EditTextPreference
        android:key="pref_export_svg_leg_width"
        android:title="@string/settings_export_svg_leg_width_title"
        android:summary="@string/settings_export_svg_leg_width_summary"
        android:inputType="numberDecimal"
        android:defaultValue="2"/>

    <EditTextPreference
        android:key="pref_export_svg_splay_width"
        android:title="@string/settings_export_svg_splay_width_title"
        android:summary="@string/settings_export_svg_splay_width_summary"
        android:inputType="numberDecimal"
        android:defaultValue="1"/>

</PreferenceScreen>
