<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="pref_hot_corners"
        android:title="@string/settings_hot_corners_title"
        android:summary="@string/settings_hot_corners_summary"
        android:defaultValue="true"/>

    <CheckBoxPreference
        android:key="pref_delete_path_fragments"
        android:title="@string/settings_delete_path_fragments_title"
        android:summary="@string/settings_delete_path_fragments_summary"
        android:defaultValue="true"/>

    <CheckBoxPreference
        android:key="pref_highlight_latest_leg"
        android:title="@string/settings_highlight_latest_leg_title"
        android:summary="@string/settings_highlight_latest_leg_summary"
        android:defaultValue="true"/>

    <CheckBoxPreference
        android:key="pref_two_finger_movement"
        android:title="@string/settings_two_finger_movement_title"
        android:summary="@string/settings_two_finger_movement_summary"
        android:defaultValue="false"/>

    <EditTextPreference
        android:key="pref_survey_text_tool_font_size"
        android:title="@string/settings_survey_text_tool_font_size_title"
        android:summary="@string/settings_survey_text_tool_font_size_summary"
        android:inputType="number"
        android:defaultValue="50"/>

    <EditTextPreference
        android:key="pref_survey_symbol_size"
        android:title="@string/settings_survey_symbol_size_title"
        android:summary="@string/settings_survey_symbol_size_summary"
        android:inputType="number"
        android:defaultValue="35"/>

    <EditTextPreference
        android:key="pref_leg_width"
        android:title="@string/settings_leg_width_title"
        android:summary="@string/settings_leg_width_summary"
        android:inputType="number"
        android:defaultValue="3"/>

    <EditTextPreference
        android:key="pref_splay_width"
        android:title="@string/settings_splay_width_title"
        android:summary="@string/settings_splay_width_summary"
        android:inputType="number"
        android:defaultValue="1"/>

    <EditTextPreference
        android:key="pref_station_diameter"
        android:title="@string/settings_station_diameter_title"
        android:summary="@string/settings_station_diameter_summary"
        android:inputType="number"
        android:defaultValue="16"/>

    <EditTextPreference
        android:key="pref_station_label_font_size_sp"
        android:title="@string/settings_station_label_font_size_sp_title"
        android:summary="@string/settings_station_label_font_size_sp_summary"
        android:inputType="number"
        android:defaultValue="8"/>

    <EditTextPreference
        android:key="pref_legend_font_size_sp"
        android:title="@string/settings_legend_font_size_sp_title"
        android:summary="@string/settings_legend_font_size_sp_summary"
        android:inputType="number"
        android:defaultValue="8"/>

    <CheckBoxPreference
        android:key="pref_anti_alias"
        android:title="@string/settings_anti_alias_title"
        android:summary="@string/settings_anti_alias_summary"
        android:defaultValue="false"/>

</PreferenceScreen>
