<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/legTitle"
        android:title="@string/station"
        android:enabled="false"/>
    <item
        android:id="@+id/setActiveStation"
        android:title="@string/menu_set_active_station"/>
    <item android:id="@+id/action_jump"
          android:title="@string/menu_jump_to">
        <menu>
            <item
                android:id="@+id/graph_station_jump_to_plan"
                android:title="@string/menu_jump_to_station_in_plan"/>
            <item
                android:id="@+id/graph_station_jump_to_ee"
                android:title="@string/menu_jump_to_station_in_elevation"/>
        </menu>
    </item>
    <item
        android:id="@+id/renameStation"
        android:title="@string/menu_rename_station"/>
    <item
        android:id="@+id/editLeg"
        android:title="@string/menu_edit_leg"/>
    <item
        android:id="@+id/deleteStation"
        android:title="@string/menu_delete_station"/>
</menu>