<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/buttonDeleteLastLeg"
        android:title="@string/sketch_menu_delete_last_leg"/>
    <item
        android:id="@+id/buttonCentreView"
        android:title="@string/sketch_menu_centre_view"/>
    <item
        android:id="@+id/buttonAutoRecentre"
        android:title="@string/sketch_menu_auto_recentre"
        android:icon="@android:drawable/ic_menu_preferences"
        android:checkable="true"/>
    <item
        android:id="@+id/buttonSnapToLines"
        android:title="@string/sketch_menu_snap_to_lines"
        android:icon="@android:drawable/ic_menu_preferences"
        android:checkable="true"/>
    <item
        android:id="@+id/buttonFadeNonActive"
        android:title="@string/sketch_menu_fade_non_active"
        android:icon="@android:drawable/ic_menu_preferences"
        android:checkable="true"/>
    <item
        android:id="@+id/buttonShowSplays"
        android:title="@string/sketch_menu_show_splays"
        android:icon="@android:drawable/ic_menu_preferences"
        android:checkable="true"/>
    <item
        android:id="@+id/buttonShowSketch"
        android:title="@string/sketch_menu_show_sketch"
        android:icon="@android:drawable/ic_menu_preferences"
        android:checkable="true"/>
    <item
        android:id="@+id/buttonShowConnections"
        android:title="@string/sketch_menu_show_connect"
        android:icon="@android:drawable/ic_menu_preferences"
        android:checkable="true"/>
    <item
        android:id="@+id/buttonShowGrid"
        android:title="@string/sketch_menu_show_grid"
        android:icon="@android:drawable/ic_menu_preferences"
        android:checkable="true"/>
    <item
        android:id="@+id/buttonShowStationLabels"
        android:title="@string/sketch_menu_show_station_labels"
        android:icon="@android:drawable/ic_menu_preferences"
        android:checkable="true"/>
</menu>