<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="pref_max_distance_delta"
        android:inputType="numberDecimal"
        android:title="@string/settings_max_distance_delta_title"
        android:summary="@string/settings_max_distance_delta_summary"
        android:defaultValue="0.05"/>

    <EditTextPreference
        android:key="pref_max_angle_delta"
        android:inputType="numberDecimal"
        android:title="@string/settings_max_angle_delta_title"
        android:summary="@string/settings_max_angle_delta_summary"
        android:defaultValue="1.7"/>

    <ListPreference
        android:key="pref_calibration_algorithm"
        android:title="@string/settings_calibration_algorithm_title"
        android:summary="@string/settings_calibration_algorithm_summary"
        android:entries="@array/settings_calibration_algorithm_entries"
        android:entryValues="@array/settings_calibration_algorithm_values"
        android:defaultValue="auto" />

</PreferenceScreen>
