<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:key="pref_theme"
        app:entries="@array/settings_theme_entries"
        app:entryValues="@array/settings_theme_values"
        android:title="@string/settings_theme_title"
        android:summary="@string/settings_theme_summary"
        android:defaultValue="auto"/>

    <ListPreference
        android:key="pref_orientation"
        android:title="@string/settings_orientation_title"
        android:summary="@string/settings_orientation_summary"
        android:entries="@array/settings_orientation_entries"
        android:entryValues="@array/settings_orientation_values"
        android:defaultValue="auto"/>

    <CheckBoxPreference
        android:key="pref_vibrate_on_new_station"
        android:title="@string/settings_new_station_vibration_title"
        android:summary="@string/settings_new_station_vibration_summary"
        android:defaultValue="true"/>

</PreferenceScreen>
